[tool.poetry]
name = "poetry-codeartifact-plugin"
version = "1.0.2"
description = "A poetry plugin for keeping your CodeArtifact authorization token up-to-date"
authors = ["Tom Petr <tom@r2c.dev>", "Mathieu Lemay <acidrain1@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_codeartifact_plugin"}]

[tool.poetry.dependencies]
python = "^3.10"
poetry = "^1.6.1"
boto3 = "^1.28.63"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.poetry.plugins."poetry.plugin"]
poetry-codeartifact-plugin = "poetry_codeartifact_plugin.plugin:CodeArtifactPlugin"
